Trimmed endpoints and fixed endpoints to conform with database population

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/test
+spring.datasource.url= jdbc:postgresql://localhost:5432/movieDB
 spring.datasource.username= postgres
 spring.datasource.password= password
